--- a/templates/references.html
+++ b/templates/references.html
@@ -1,72 +1,92 @@
 <!DOCTYPE html >
 <html>
 <head>
-	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-	<link rel="stylesheet" type="text/css" href={% static 'references.css' %} />
-	<title>References</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+    <link rel="stylesheet" type="text/css" href={% static 'references.css' %}/>
+    <title>References</title>
 </head>
 
 
 <body>
 
 <div id="nav_bar">
-<ul>	
-    <li> <a href="home.html">Home</a></li>
-    <li> <a href="index.html">Profile</a></li>
-    <li> <a href="Accounts.html">Accounts </a></li>
-    <li> <a href="goals.html">Goals</a></li>
-    <li> <a href="collection.html">Collection</a></li>
-    <li> <a href="ATMs.html">ATMs</a></li>
-    <li> <a href="guide.html">Banking Guide</a></li>
-</ul>
+    <ul>
+        <li><a href="home.html">Home</a></li>
+        <li><a href="index.html">Profile</a></li>
+        <li><a href="Accounts.html">Accounts </a></li>
+        <li><a href="goals.html">Goals</a></li>
+        <li><a href="collection.html">Collection</a></li>
+        <li><a href="ATMs.html">ATMs</a></li>
+        <li><a href="guide.html">Banking Guide</a></li>
+    </ul>
 </div>
 
 <div id="banner">
-	<img src={% static 'general/references.png' %} alt="References" title="References" width="1055" height="191" />
-	<img  src={% static 'general/logout_1.png' %} width="140px" height="70px" alt="Logout" id="logout" onClick="window.location.href='Landing_page.html'">
+    <img src={% static 'general/references.png' %} alt="References" title="References" width="1055" height="191"/>
+    <img src={% static 'general/logout_1.png' %} width="140px" height="70px" alt="Logout" id="logout"
+         onClick="window.location.href='Landing_page.html'">
 </div>
 
 <div id="content">
-	
-	<p><b class="section_title">Child Interface Pages Background</b><br/>
-		Guildford Borough Council (2014), <i>Playrangers</i>, <a href="http://www.guildford.gov.uk/playrangers" class="site_links">http://www.guildford.gov.uk/playrangers</a></p>
-		
-	<hr/>
-		
-	<p><b class="section_title">Login/Register Pages Background</b><br/>
-		imgkid.com (2015), <i>Kids playing at school</i>,  <a href="http://imgkid.com/kids-playing-at-school.shtml" class="site_links">http://imgkid.com/kids-playing-at-school.shtml</a></p>
-		
-	<hr/>	
-		
-	<p><b class="section_title">Profile Page Banners</b><br/>
-		imgkid.com (2015), <i>Kids playing at school</i>,  <a href="http://imgkid.com/kids-playing-at-school.shtml" class="site_links">http://imgkid.com/kids-playing-at-school.shtml</a><br/>
-		Fischa (2014), <i>Beautiful night sky wallpaper</i>, <a href="http://www.desktopwallpapers4.me/fantasy/beatuiful-night-sky-22462/" class="site_links">http://www.desktopwallpapers4.me/fantasy/beatuiful-night-sky-22462/</a><br/>											
-		Summe C. (2014), <i>Roller Coaster</i>, <a href="http://sites.duke.edu/brunaliboriocsos/sample-page/roller-coaster/" class="site_links">http://sites.duke.edu/brunaliboriocsos/sample-page/roller-coaster/</a><br/>								
-		SAW International (2007), <i>Fish farming – silent screams</i>, <a href="http://www.saawinternational.org/fishfarming.htm" class="site_links">http://www.saawinternational.org/fishfarming.htm</a><br/>		
-		Slots Marvel (2015), <i>Marvel Slots Review</i>, <a href="http://slotsmarvel.com/dare-to-play-all-marvel-slots-free/" class="site_links">http://slotsmarvel.com/dare-to-play-all-marvel-slots-free/</a></p>	
-	
-	<hr/>
-	
-	<p><b class="section_title">Home Page Icons</b><br/>										
-		pixshark.com (2015),  <i>Piggy bank pink black and white</i>, <a href="http://pixshark.com/piggy-bank-clip-art-black-and-white.htm" class="site_links">http://pixshark.com/piggy-bank-clip-art-black-and-white.htm</a><br/>					
-		Clipart Panda (2014),  <i>Treasure Map Clipart Black and White</i>, <a href="http://www.clipartpanda.com/clipart_images/downloads-3855817" class="site_links">http://www.clipartpanda.com/clipart_images/downloads-3855817</a><br/>											
-		galleryhip.com (2015),  <i>Open book clipart black and white</i>, <a href="http://galleryhip.com/open-book-clip-art-black-and-white.html" class="site_links">http://galleryhip.com/open-book-clip-art-black-and-white.html</a><br/>						
-		Aragon E. J. (2011),  <i>Black and White Party Gift</i>, <a href="http://sweetclipart.com/black-and-white-party-gift-351" class="site_links">http://sweetclipart.com/black-and-white-party-gift-351</a></p>
-	
-	<hr/>
-	
-	<p><b class="section_title">Lloyds Banking Group Logo</b><br/>									
-		Lloyds Banking Group (2015),  <i>Lloyds Banking Group Logo</i>, <a href="http://www.lloydsbankinggroup.com/" class="site_links">http://www.lloydsbankinggroup.com/</a></p>		
-	
-	<hr/>
-	
-	<p><b class="section_title">Lloyds Banking Group Brands Logos</b><br/>				
-		Lloyds Banking Group (2015),  <i>Lloyds Banking Group Brands</i>, <a href="http://www.lloydsbankinggroup.com/" class="site_links">http://www.lloydsbankinggroup.com/</a></p>
+
+    <p><b class="section_title">Child Interface Pages Background</b><br/>
+        Guildford Borough Council (2014), <i>Playrangers</i>, <a href="http://www.guildford.gov.uk/playrangers"
+                                                                 class="site_links">http://www.guildford.gov.uk/playrangers</a>
+    </p>
+
+    <hr/>
+
+    <p><b class="section_title">Login/Register Pages Background</b><br/>
+        imgkid.com (2015), <i>Kids playing at school</i>, <a href="http://imgkid.com/kids-playing-at-school.shtml"
+                                                             class="site_links">http://imgkid.com/kids-playing-at-school.shtml</a>
+    </p>
+
+    <hr/>
+
+    <p><b class="section_title">Profile Page Banners</b><br/>
+        imgkid.com (2015), <i>Kids playing at school</i>, <a href="http://imgkid.com/kids-playing-at-school.shtml"
+                                                             class="site_links">http://imgkid.com/kids-playing-at-school.shtml</a><br/>
+        Fischa (2014), <i>Beautiful night sky wallpaper</i>, <a
+                href="http://www.desktopwallpapers4.me/fantasy/beatuiful-night-sky-22462/" class="site_links">http://www.desktopwallpapers4.me/fantasy/beatuiful-night-sky-22462/</a><br/>
+        Summe C. (2014), <i>Roller Coaster</i>, <a
+                href="http://sites.duke.edu/brunaliboriocsos/sample-page/roller-coaster/" class="site_links">http://sites.duke.edu/brunaliboriocsos/sample-page/roller-coaster/</a><br/>
+        SAW International (2007), <i>Fish farming – silent screams</i>, <a
+                href="http://www.saawinternational.org/fishfarming.htm" class="site_links">http://www.saawinternational.org/fishfarming.htm</a><br/>
+        Slots Marvel (2015), <i>Marvel Slots Review</i>, <a
+                href="http://slotsmarvel.com/dare-to-play-all-marvel-slots-free/" class="site_links">http://slotsmarvel.com/dare-to-play-all-marvel-slots-free/</a>
+    </p>
+
+    <hr/>
+
+    <p><b class="section_title">Home Page Icons</b><br/>
+        pixshark.com (2015), <i>Piggy bank pink black and white</i>, <a
+                href="http://pixshark.com/piggy-bank-clip-art-black-and-white.htm" class="site_links">http://pixshark.com/piggy-bank-clip-art-black-and-white.htm</a><br/>
+        Clipart Panda (2014), <i>Treasure Map Clipart Black and White</i>, <a
+                href="http://www.clipartpanda.com/clipart_images/downloads-3855817" class="site_links">http://www.clipartpanda.com/clipart_images/downloads-3855817</a><br/>
+        galleryhip.com (2015), <i>Open book clipart black and white</i>, <a
+                href="http://galleryhip.com/open-book-clip-art-black-and-white.html" class="site_links">http://galleryhip.com/open-book-clip-art-black-and-white.html</a><br/>
+        Aragon E. J. (2011), <i>Black and White Party Gift</i>, <a
+                href="http://sweetclipart.com/black-and-white-party-gift-351" class="site_links">http://sweetclipart.com/black-and-white-party-gift-351</a>
+    </p>
+
+    <hr/>
+
+    <p><b class="section_title">Lloyds Banking Group Logo</b><br/>
+        Lloyds Banking Group (2015), <i>Lloyds Banking Group Logo</i>, <a href="http://www.lloydsbankinggroup.com/"
+                                                                          class="site_links">http://www.lloydsbankinggroup.com/</a>
+    </p>
+
+    <hr/>
+
+    <p><b class="section_title">Lloyds Banking Group Brands Logos</b><br/>
+        Lloyds Banking Group (2015), <i>Lloyds Banking Group Brands</i>, <a href="http://www.lloydsbankinggroup.com/"
+                                                                            class="site_links">http://www.lloydsbankinggroup.com/</a>
+    </p>
 
 </div>
 
 <div id="footer">
-		<p><a href="references.html">References</a></p>
+    <p><a href="references.html">References</a></p>
 </div>
 
 </body>
