--- a/static/bank_guide/guide-CSS.css
+++ b/static/bank_guide/guide-CSS.css
@@ -1,95 +1,153 @@
 @charset "utf-8";
 /* CSS Document */
 /*template*/
-body		{background-size: 100%;}
-#banner	{width: 1055px;
-		height: 191px;
-		margin: 0% auto;}
+body {
+    background-size: 100%;
+}
 
-#content	{background-color: #FFFFFF;
-			width: 1055px;
-			margin: 0px auto;
-			padding-top: 4px;
-			padding-bottom: 80px;}
-			
-#logout	{position: relative;
-		top: -85px;
-		left: 905px;}
-#logout:hover	{background-color: RGBA(255, 255, 255, 0.7);
-				border-radius: 3px;}
-#logout:active	{background-color: RGBA(208, 206, 206, 0.7);}
-/**---------------------------------------------------------------------*/
+#banner {
+    width: 1055px;
+    height: 191px;
+    margin: 0% auto;
+}
 
+#content {
+    background-color: #FFFFFF;
+    width: 1055px;
+    margin: 0px auto;
+    padding-top: 4px;
+    padding-bottom: 80px;
+}
 
-/**---------------------------------------------------------------------*/						
-#nav_bar	{background-color: #FFFFFF;
-			height: 80px;
-			width: 1055px;
-			background-position: left;
-			background-size: 157px 85px;
-			background-repeat: no-repeat;
-			margin: 0% auto;}
-#nav_bar ul	{text-align: right;
-			padding: 25px 0px;}
-#nav_bar ul li	{display: inline;
-			font-family: Century Gothic;
-			font-size: 25px;
-			font-style: italic;
-			color: #0B8C52;
-			padding: 25px 10px;}
-#nav_bar li a	{text-decoration:none;
-			color: #0B8C52;}
-#nav_bar li:hover	a {color: #FFFFFF;}
-#nav_bar li:hover	{background-color: #0B8C52;}
-/**---------------------------------------------------------------------*/
+#logout {
+    position: relative;
+    top: -85px;
+    left: 905px;
+}
 
+#logout:hover {
+    background-color: RGBA(255, 255, 255, 0.7);
+    border-radius: 3px;
+}
+
+#logout:active {
+    background-color: RGBA(208, 206, 206, 0.7);
+}
 
 /**---------------------------------------------------------------------*/
-#body table	{position: relative;
-			top: -7px;
-			left: 580px;	
-			width: 380px;}
 
-#body td 	{padding-left: 10px;
-		text-align: center;}
-		
-		
-#what_is_bankingv2{display:none;}
+/**---------------------------------------------------------------------*/
+#nav_bar {
+    background-color: #FFFFFF;
+    height: 80px;
+    width: 1055px;
+    background-position: left;
+    background-size: 157px 85px;
+    background-repeat: no-repeat;
+    margin: 0% auto;
+}
 
-#banking_glossaryv2{display:block;}
+#nav_bar ul {
+    text-align: right;
+    padding: 25px 0px;
+}
 
-#banking_tipsv2{display:block;}
+#nav_bar ul li {
+    display: inline;
+    font-family: Century Gothic;
+    font-size: 25px;
+    font-style: italic;
+    color: #0B8C52;
+    padding: 25px 10px;
+}
 
-#what_is_banking{display: blocked;}
+#nav_bar li a {
+    text-decoration: none;
+    color: #0B8C52;
+}
 
-#banking_glossary{display: none;}
+#nav_bar li:hover a {
+    color: #FFFFFF;
+}
 
-#banking_tips{display: none;}
+#nav_bar li:hover {
+    background-color: #0B8C52;
+}
 
-#banking_glossary_box, #banking_tips_box{display:none;}
-
-#what_is_banking_box, #banking_glossary_box, #banking_tips_box	{padding-top: 20px;
-																margin: -1% auto;
-																font-family:Century Gothic;
-																background-color:#0B8C52;
-																height:300px;}
-
-#what_is_banking_box p, #banking_glossary_box p, #banking_tips_box p	{margin-left: 200px;
-																	margin-right: 200px;}
 /**---------------------------------------------------------------------*/
 
-																	
 /**---------------------------------------------------------------------*/
-#footer	{background-color: #D0CECE;
-		height: 80px;
-		width: 1055px;
-		font-family: Century Gothic;
-		color: #0B8C52;
-		font-size: 25px;
-		text-align: center;
-		padding-top: 40px;
-		margin: 0% auto;}	
+#body table {
+    position: relative;
+    top: -7px;
+    left: 580px;
+    width: 380px;
+}
 
-#footer p	{width: 200px;
-			margin: auto;}		
+#body td {
+    padding-left: 10px;
+    text-align: center;
+}
+
+#what_is_bankingv2 {
+    display: none;
+}
+
+#banking_glossaryv2 {
+    display: block;
+}
+
+#banking_tipsv2 {
+    display: block;
+}
+
+#what_is_banking {
+    display: blocked;
+}
+
+#banking_glossary {
+    display: none;
+}
+
+#banking_tips {
+    display: none;
+}
+
+#banking_glossary_box, #banking_tips_box {
+    display: none;
+}
+
+#what_is_banking_box, #banking_glossary_box, #banking_tips_box {
+    padding-top: 20px;
+    margin: -1% auto;
+    font-family: Century Gothic;
+    background-color: #0B8C52;
+    height: 300px;
+}
+
+#what_is_banking_box p, #banking_glossary_box p, #banking_tips_box p {
+    margin-left: 200px;
+    margin-right: 200px;
+}
+
+/**---------------------------------------------------------------------*/
+
+/**---------------------------------------------------------------------*/
+#footer {
+    background-color: #D0CECE;
+    height: 80px;
+    width: 1055px;
+    font-family: Century Gothic;
+    color: #0B8C52;
+    font-size: 25px;
+    text-align: center;
+    padding-top: 40px;
+    margin: 0% auto;
+}
+
+#footer p {
+    width: 200px;
+    margin: auto;
+}
+
 /**---------------------------------------------------------------------*/
