--- a/static/collection/collection.css
+++ b/static/collection/collection.css
@@ -1,101 +1,169 @@
 /**---------------------------------------------------------------------*/
-body		{background-size: 100%;}
+body {
+    background-size: 100%;
+}
 
-#content	{background-color: #FFFFFF;
-			width: 1055px;
-			margin: 0px auto;
-			padding-top: 10px;}
-			
-#banner	{width: 1055px;
-		height: 191px;
-		margin: 0% auto;}
-#logout	{position: relative;
-		top: -85px;
-		left: 905px;}
-#logout:hover	{background-color: RGBA(255, 255, 255, 0.7);
-				border-radius: 3px;}
-#logout:active	{background-color: RGBA(208, 206, 206, 0.7);}
-/**---------------------------------------------------------------------*/	
-	
-/**---------------------------------------------------------------------*/	
-#nav_bar	{background-color: #FFFFFF;
-			height: 80px;
-			width: 1055px;
-			background-position: left;
-			background-size: 157px 85px;
-			background-repeat: no-repeat;
-			margin: 0% auto;}
-#nav_bar ul	{text-align: right;
-			padding: 25px 0px;}
-#nav_bar ul li	{display: inline;
-			font-family: Century Gothic;
-			font-size: 25px;
-			font-style: italic;
-			color: #0B8C52;
-			padding: 25px 10px;}
-#nav_bar li a	{text-decoration:none;
-			color: #0B8C52;}
-#nav_bar li:hover	a {color: #FFFFFF;}
-#nav_bar li:hover	{background-color: #0B8C52;}
-/**---------------------------------------------------------------------*/			
-			
-/**---------------------------------------------------------------------*/
-#trophies_box	{width: 1005px;
-				height: 400px;
-				background-color: RGBA(11, 140, 82, 0.9);
-				margin: 10px auto;
-				border-radius: 50px;}
-#cards, #rewards, #gifts	{float: left;
-							margin: 55px;
-							font-family: Calibri;
-							font-weight: bold;
-							font-size: 70px;}
-#cards	{color: #E4864D;}
-#rewards	{color: #50AEE5;}
-#gifts	{color: #8AB549;}
+#content {
+    background-color: #FFFFFF;
+    width: 1055px;
+    margin: 0px auto;
+    padding-top: 10px;
+}
 
-#legend	{margin-left: 50px;
-		font-family: Candara;
-		font-size: 20px;}
+#banner {
+    width: 1055px;
+    height: 191px;
+    margin: 0% auto;
+}
+
+#logout {
+    position: relative;
+    top: -85px;
+    left: 905px;
+}
+
+#logout:hover {
+    background-color: RGBA(255, 255, 255, 0.7);
+    border-radius: 3px;
+}
+
+#logout:active {
+    background-color: RGBA(208, 206, 206, 0.7);
+}
+
 /**---------------------------------------------------------------------*/
 
 /**---------------------------------------------------------------------*/
-#collection_history	{width: 1020px;
-					height: 220px;
-					margin: 20px auto;}
+#nav_bar {
+    background-color: #FFFFFF;
+    height: 80px;
+    width: 1055px;
+    background-position: left;
+    background-size: 157px 85px;
+    background-repeat: no-repeat;
+    margin: 0% auto;
+}
 
-table	{width: 335px;
-	font-family: Century Gothic;
-	background-color: #0B8C52;
-	float: left;
-	margin: 2px;}
-	
-table caption	{background-color: #0B8C52;
-			height: 35x;
-			color: #FFFFFF;
-			font-size: 25px;
-			padding: 10px;}
-			
-table tr th	{height: 30px;
-		background-color: #D0CECE;
-		color: #0B8C52;
-		font-size: 20px;
-		text-align: left;
-		padding-left: 5px;}
+#nav_bar ul {
+    text-align: right;
+    padding: 25px 0px;
+}
 
-table td	{background-color: #D0CECE;
-		height: 20px;}
+#nav_bar ul li {
+    display: inline;
+    font-family: Century Gothic;
+    font-size: 25px;
+    font-style: italic;
+    color: #0B8C52;
+    padding: 25px 10px;
+}
+
+#nav_bar li a {
+    text-decoration: none;
+    color: #0B8C52;
+}
+
+#nav_bar li:hover a {
+    color: #FFFFFF;
+}
+
+#nav_bar li:hover {
+    background-color: #0B8C52;
+}
+
 /**---------------------------------------------------------------------*/
-			 
-/**---------------------------------------------------------------------*/			 
-#footer	{background-color: #D0CECE;
-		height: 80px;
-		width: 1055px;
-		font-family: Century Gothic;
-		color: #0B8C52;
-		font-size: 25px;
-		text-align: center;
-		padding-top: 40px;}	
-#footer p	{width: 200px;
-			margin: auto;}		
+
+/**---------------------------------------------------------------------*/
+#trophies_box {
+    width: 1005px;
+    height: 400px;
+    background-color: RGBA(11, 140, 82, 0.9);
+    margin: 10px auto;
+    border-radius: 50px;
+}
+
+#cards, #rewards, #gifts {
+    float: left;
+    margin: 55px;
+    font-family: Calibri;
+    font-weight: bold;
+    font-size: 70px;
+}
+
+#cards {
+    color: #E4864D;
+}
+
+#rewards {
+    color: #50AEE5;
+}
+
+#gifts {
+    color: #8AB549;
+}
+
+#legend {
+    margin-left: 50px;
+    font-family: Candara;
+    font-size: 20px;
+}
+
+/**---------------------------------------------------------------------*/
+
+/**---------------------------------------------------------------------*/
+#collection_history {
+    width: 1020px;
+    height: 220px;
+    margin: 20px auto;
+}
+
+table {
+    width: 335px;
+    font-family: Century Gothic;
+    background-color: #0B8C52;
+    float: left;
+    margin: 2px;
+}
+
+table caption {
+    background-color: #0B8C52;
+    height: 35x;
+    color: #FFFFFF;
+    font-size: 25px;
+    padding: 10px;
+}
+
+table tr th {
+    height: 30px;
+    background-color: #D0CECE;
+    color: #0B8C52;
+    font-size: 20px;
+    text-align: left;
+    padding-left: 5px;
+}
+
+table td {
+    background-color: #D0CECE;
+    height: 20px;
+}
+
+/**---------------------------------------------------------------------*/
+
+/**---------------------------------------------------------------------*/
+#footer {
+    background-color: #D0CECE;
+    height: 80px;
+    width: 1055px;
+    font-family: Century Gothic;
+    color: #0B8C52;
+    font-size: 25px;
+    text-align: center;
+    padding-top: 40px;
+}
+
+#footer p {
+    width: 200px;
+    margin: auto;
+}
+
 /**---------------------------------------------------------------------*/
