--- a/static/login/SignUp.css
+++ b/static/login/SignUp.css
@@ -1,114 +1,163 @@
-body		{background-size: 100%;
-		background-repeat: no-repeat;
-		background-position: fixed;
-		background-color: #D0CECE;
-		min-width: 500px;}
-/**---------------------------------------------------------------------*/	
-/**---------------------------------------------------------------------*/	
-#nav_bar	{background-color: #FFFFFF;
-			height: 89px;
-			width: 100%;
-			min-width: 1000px;
-			background-position: left;
-			background-size: 190px 100px;
-			background-repeat: no-repeat;
-			margin: -8px;
-			z-index: 9999;
-			position: fixed;}
-#nav_bar ul	{text-align: right;
-			margin-top: 23px;
-			width: 850px;
-			float: right;}
-#nav_bar ul li	{display: inline;
-			font-family: Century Gothic;
-			font-size: 35px;
-			font-style:  italic;
-			font-weight: bold;
-			padding: 24px 20px;}
-#nav_bar li a	{text-decoration:none;
-			color: #000000;}
-#nav_bar li:hover	a {color: #FFFFFF;}
-#nav_bar li:hover	{background-color: #0B8C52;}
+body {
+    background-size: 100%;
+    background-repeat: no-repeat;
+    background-position: fixed;
+    background-color: #D0CECE;
+    min-width: 500px;
+}
+
+/**---------------------------------------------------------------------*/
+/**---------------------------------------------------------------------*/
+#nav_bar {
+    background-color: #FFFFFF;
+    height: 89px;
+    width: 100%;
+    min-width: 1000px;
+    background-position: left;
+    background-size: 190px 100px;
+    background-repeat: no-repeat;
+    margin: -8px;
+    z-index: 9999;
+    position: fixed;
+}
+
+#nav_bar ul {
+    text-align: right;
+    margin-top: 23px;
+    width: 850px;
+    float: right;
+}
+
+#nav_bar ul li {
+    display: inline;
+    font-family: Century Gothic;
+    font-size: 35px;
+    font-style: italic;
+    font-weight: bold;
+    padding: 24px 20px;
+}
+
+#nav_bar li a {
+    text-decoration: none;
+    color: #000000;
+}
+
+#nav_bar li:hover a {
+    color: #FFFFFF;
+}
+
+#nav_bar li:hover {
+    background-color: #0B8C52;
+}
+
 /**---------------------------------------------------------------------*/
 
 /**---------------------------------------------------------------------*/
-#main	{width: 100%;
-		background-color: transparent;
-		text-align: center;}
-		
-#title	{max-width: 75%;
-		max-height: 40%;
-		min-width: 30%;
-		min-height: 14%;
-		margin-top: 100px;}
+#main {
+    width: 100%;
+    background-color: transparent;
+    text-align: center;
+}
 
-#register	{width: 900px;
-			height: 700px;
-			margin: 0px auto;
-			padding-top: 50px;
-			background: RGBA(255, 255, 255, 1) url("/static/login/lloyds_group_logo.png") no-repeat;
-			background-size: 18% 11%;}
-			
-#form	{width: 850px;
-		height: 600px;
-		margin: 5% auto;
-		font-family: Century Gothic;
-		font-size: 30px;
-		font-weight: bold;
-		color: #0B8C52;}
+#title {
+    max-width: 75%;
+    max-height: 40%;
+    min-width: 30%;
+    min-height: 14%;
+    margin-top: 100px;
+}
 
-#form_title	{margin-bottom: 50px;}
-		
-.field_title	{text-align: right;
-				font-size: 20px;
-				margin-right: 150px;}
-				
-.input_field	{width: 300px;
-				height: 24px;
-				vertical-align: middle;
-				background-color: #0B8C52;
-				color: #FFFFFF;
-				font-size: 23px;}
-		
-#day, #month, #year	{width: 82px;
-					height: 24px;
-					vertical-align: middle;
-					background-color: #0B8C52;
-					color: #FFFFFF;
-					font-size: 23px;}
+#register {
+    width: 900px;
+    height: 700px;
+    margin: 0px auto;
+    padding-top: 50px;
+    background: RGBA(255, 255, 255, 1) url("/static/login/lloyds_group_logo.png") no-repeat;
+    background-size: 18% 11%;
+}
 
-#address	{height: 60px;}
+#form {
+    width: 850px;
+    height: 600px;
+    margin: 5% auto;
+    font-family: Century Gothic;
+    font-size: 30px;
+    font-weight: bold;
+    color: #0B8C52;
+}
 
-#upload_photo	{background-color: #FFFFFF;
-				height: 35px;
-				width: 100px;
-				margin-right: 205px;
-				font-family: Century Gothic;
-				font-size: 20px;
-				font-weight: bold;
-				color: #0B8C52;}
-				
-#register_button	{background-color: #0B8C52;
-					height: 35px;
-					width: 200px;
-					margin-top: 30px;
-					font-family: Century Gothic;
-					font-size: 20px;
-					font-weight: bold;
-					color: #FFFFFF;}
-					
-/**---------------------------------------------------------------------*/			 
-#footer	{background-color: #D0CECE;
-		height: 80px;
-		width: 101%;
-		margin-top: 150px;
-		margin-left: -8px;
-		margin-bottom: -8px;
-		font-family: Century Gothic;
-		color: #0B8C52;
-		font-size: 25px;
-		text-align: center;
-		padding-top: 40px;}	
-#footer p	{width: 200px;
-			margin: auto;}			 
+#form_title {
+    margin-bottom: 50px;
+}
+
+.field_title {
+    text-align: right;
+    font-size: 20px;
+    margin-right: 150px;
+}
+
+.input_field {
+    width: 300px;
+    height: 24px;
+    vertical-align: middle;
+    background-color: #0B8C52;
+    color: #FFFFFF;
+    font-size: 23px;
+}
+
+#day, #month, #year {
+    width: 82px;
+    height: 24px;
+    vertical-align: middle;
+    background-color: #0B8C52;
+    color: #FFFFFF;
+    font-size: 23px;
+}
+
+#address {
+    height: 60px;
+}
+
+#upload_photo {
+    background-color: #FFFFFF;
+    height: 35px;
+    width: 100px;
+    margin-right: 205px;
+    font-family: Century Gothic;
+    font-size: 20px;
+    font-weight: bold;
+    color: #0B8C52;
+}
+
+#register_button {
+    background-color: #0B8C52;
+    height: 35px;
+    width: 200px;
+    margin-top: 30px;
+    font-family: Century Gothic;
+    font-size: 20px;
+    font-weight: bold;
+    color: #FFFFFF;
+}
+
+/**---------------------------------------------------------------------*/
+#footer {
+    background-color: #D0CECE;
+    height: 80px;
+    width: 101%;
+    margin-top: 150px;
+    margin-left: -8px;
+    margin-bottom: -8px;
+    font-family: Century Gothic;
+    color: #0B8C52;
+    font-size: 25px;
+    text-align: center;
+    padding-top: 40px;
+}
+
+#footer p {
+    width: 200px;
+    margin: auto;
+}
+
 /**---------------------------------------------------------------------*/
