--- a/templates/Landing_Page.html
+++ b/templates/Landing_Page.html
@@ -1,34 +1,33 @@
-
 <!DOCTYPE html>
 <html en="html">
 {% load staticfiles %}
 <head>
-	<title>{% block title %}Lloyds NetBanking{% endblock %}</title>
-	<meta charset="utf-8" />
+    <title>{% block title %}Lloyds NetBanking{% endblock %}</title>
+    <meta charset="utf-8"/>
 
-	<link rel="stylesheet" type="text/css" href={% static 'login\Landing_Page.css' %}/>
-	<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
-	<script type="text/javascript" src={% static 'login\Landing_Page.js' %}></script>
+    <link rel="stylesheet" type="text/css" href={% static 'login\Landing_Page.css' %}/>
+    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
+    <script type="text/javascript" src={% static 'login\Landing_Page.js' %}></script>
 
-<style>
-</style>
-	
+    <style>
+    </style>
+
 </head>
 
 
 <body>
 
 <div id="nav_bar">
-	<ul>	
-        <li><a href={% url  'landing'  %} class="smoothScroll" >Main Website</a></li>
-        <li><a id="scroll" class="smoothScroll" href= {% url  'landing'  %}#about_start >About Junior Banking</a></li>
+    <ul>
+        <li><a href={% url 'landing' %} class="smoothScroll">Main Website</a></li>
+        <li><a id="scroll" class="smoothScroll" href={% url 'landing' %}#about_start>About Junior Banking</a></li>
         <!--<li><a href="SignUp.html">Sign Up</a></li> -->
-	</ul>
+    </ul>
 </div>
 <div id="main">
-	<img src={% static 'login/title.png' %} alt="finish sign" id="title">
+    <img src={% static 'login/title.png' %} alt="finish sign" id="title">
     <div id="login">
-	<!--<form action = "." id="j_login" method="POST">
+        <!--<form action = "." id="j_login" method="POST">
 
 			<p>Junior Login</p>
             {% csrf_token %}
@@ -37,129 +36,135 @@
 
 
 	</form>-->
-	<form action ="." id="p_login" method="POST">
-			<p>Login</p>
+        <form action="." id="p_login" method="POST">
+            <p>Login</p>
             {% csrf_token %}
-            {{form.as_p}}
-			<input class="login_button" type="submit" value="Sign In" id="j_log"/>
+            {{ form.as_p }}
+            <input class="login_button" type="submit" value="Sign In" id="j_log"/>
 
-	</form>
+        </form>
+    </div>
+</div>
+
+<div id="about_start">
+    <div class="grey">
+        <div class="ABOUT_content">
+            <p class="site_info">Lloyds Junior Banking is ...
+                <br/>______________________________
+                <br/>______________________________
+                <br/>______________________________
+                <br/>______________________________
+            </p>
         </div>
-</div>
+    </div>
 
-<div id="about_start">	
-<div class="grey">
-	<div class="ABOUT_content">
-		<p class="site_info">Lloyds Junior Banking is ...
-			<br/>______________________________
-			<br/>______________________________
-			<br/>______________________________
-			<br/>______________________________
-		</p>
-	</div>
-</div>
-	
-<div class="green">
-	<div class="ABOUT_content">
-		<img src={% static 'login/pages/4.png' %} width="370px" height="250px" alt="home" class="page_sample"/>
-		<img src={% static 'login/pages/11.png' %} width="300px" height="250px" alt="home" class="page_sample"/>
-		
-		<p class="site_info">Two types of interfaces
-			<br/>______________________________
-			<br/>______________________________
-			<br/>______________________________
-			<br/>______________________________
-		</p>
-	</div>
-</div>
-	
-<div class="white">
-	<div class="ABOUT_content">
-		<p class="site_info">Money management
-			<br/>system via two types of
-			<br/>Child Accounts
-		</p>
-	
-		<p class="site_info">__________________
-			<br/>______________________________
-			<br/>______________________________
-			<br/>______________________________
-			<br/>______________________________
-		</p>
-		
-		<img src={% static 'login/pages/5.png' %} width="300px" height="250px" alt="home" class="page_sample"/>
-	</div>
-</div>
-	
-<div class="grey">
-	<div class="ABOUT_content">
-		<img src={% static 'login/pages/6.png' %} width="300px" height="250px" alt="home" class="page_sample"/>
+    <div class="green">
+        <div class="ABOUT_content">
+            <img src={% static 'login/pages/4.png' %} width="370px" height="250px" alt="home" class="page_sample"/>
+            <img src={% static 'login/pages/11.png' %} width="300px" height="250px" alt="home" class="page_sample"/>
 
-		<p class="site_info">Goals and Awards system ...
-			<br/>______________________________
-			<br/>______________________________
-			<br/>______________________________
-			<br/>______________________________
-		</p>
-	
-		<img src={% static 'login/pages/7.png' %} width="300px" height="250px" alt="home" class="page_sample"/>
-	</div>
-</div>
-	
-<div class="green">
-	<div class="ABOUT_content" id="atms">
-		<p class="site_info">Select Safe<br/>Neighbourhood ATMs</p>
-	
-		<img src={% static 'login/pages/8.png' %} width="300px" height="250px" alt="home" class="page_sample"/>
-	</div>	
-	<div class="ABOUT_content"  id="guide">	
-		<img src={% static 'login/pages/9.png' %} width="300px" height="250px" alt="home" class="page_sample"/>
-		
-		<p class="site_info">Get banking <br/>advice and tips</p>
-	</div>
-</div>
+            <p class="site_info">Two types of interfaces
+                <br/>______________________________
+                <br/>______________________________
+                <br/>______________________________
+                <br/>______________________________
+            </p>
+        </div>
+    </div>
 
-<div class="white" id="profile">
-	<div class="ABOUT_content" id="profiles_text">
-		<p class="site_info">Customise your profile colour preferences</p>
-	</div>	
-	
-	<div class="ABOUT_content" id="profiles_pics">	
-	
-		<img src={% static 'login/left_arrow_1.png' %} alt="previous" id="left_arrow" onclick="rotateLeft();" class="page_sample">
-		<div id="image_container" class="page_sample"><img src={% static 'login/pages/100.png' %} alt="profile samples" id="profile_image"></div>
-		<img src={% static 'login/right_arrow.png' %} alt="next" id="right_arrow" onclick="rotateRight();" class="page_sample">
-		
-	</div>	
-</div>
+    <div class="white">
+        <div class="ABOUT_content">
+            <p class="site_info">Money management
+                <br/>system via two types of
+                <br/>Child Accounts
+            </p>
+
+            <p class="site_info">__________________
+                <br/>______________________________
+                <br/>______________________________
+                <br/>______________________________
+                <br/>______________________________
+            </p>
+
+            <img src={% static 'login/pages/5.png' %} width="300px" height="250px" alt="home" class="page_sample"/>
+        </div>
+    </div>
+
+    <div class="grey">
+        <div class="ABOUT_content">
+            <img src={% static 'login/pages/6.png' %} width="300px" height="250px" alt="home" class="page_sample"/>
+
+            <p class="site_info">Goals and Awards system ...
+                <br/>______________________________
+                <br/>______________________________
+                <br/>______________________________
+                <br/>______________________________
+            </p>
+
+            <img src={% static 'login/pages/7.png' %} width="300px" height="250px" alt="home" class="page_sample"/>
+        </div>
+    </div>
+
+    <div class="green">
+        <div class="ABOUT_content" id="atms">
+            <p class="site_info">Select Safe<br/>Neighbourhood ATMs</p>
+
+            <img src={% static 'login/pages/8.png' %} width="300px" height="250px" alt="home" class="page_sample"/>
+        </div>
+        <div class="ABOUT_content" id="guide">
+            <img src={% static 'login/pages/9.png' %} width="300px" height="250px" alt="home" class="page_sample"/>
+
+            <p class="site_info">Get banking <br/>advice and tips</p>
+        </div>
+    </div>
+
+    <div class="white" id="profile">
+        <div class="ABOUT_content" id="profiles_text">
+            <p class="site_info">Customise your profile colour preferences</p>
+        </div>
+
+        <div class="ABOUT_content" id="profiles_pics">
+
+            <img src={% static 'login/left_arrow_1.png' %} alt="previous" id="left_arrow" onclick="rotateLeft();"
+                 class="page_sample">
+
+            <div id="image_container" class="page_sample"><img src={% static 'login/pages/100.png' %} alt="profile
+                                                               samples" id="profile_image">
+            </div>
+            <img src={% static 'login/right_arrow.png' %} alt="next" id="right_arrow" onclick="rotateRight();"
+                 class="page_sample">
+
+        </div>
+    </div>
 
 </div>
-	
+
 <div id="footer">
-	<p id="footer_message">
-		Start learning with Lloyds Junior Banking
-	</p>
-	<p id="buttons">
-		<a id="back_to_top" href="#main" class="smoothScroll">Back to Login</a>
-		<!-- <a id="register" href="SignUp.html">Register</a> -->
-	</p>
-	
-	
-	<div id="partners">
-	<div id="brands_logos">
-		<img src={% static 'login/bank_of_scotland.png' %} alt="bank_of_scotland" class="logos">
-		<img src={% static 'login/birmingham_midshares.png' %} alt="birmingham_midshares" class="logos">
-		<img src={% static 'login/black_horse.png' %} alt="black_horse" class="logos">
-		<img src={% static 'login/colleys.png' %} alt="colleys" class="logos">
-		<img src={% static 'login/halifax.png' %} alt="halifax" class="logos">
-		<img src={% static 'login/ldc.png' %} alt="ldc" class="logos">
-		<img src={% static 'login/lloyds_autolease.png' %} alt="lloyds_autolease" class="logos">
-		<img src={% static 'login/lloyds_bank.png' %} alt="lloyds_bank" class="logos">
-		<img src={% static 'login/scottish_widows.png' %} alt="scottish_widows" class="logos">
-	</div>
-	</div>
+    <p id="footer_message">
+        Start learning with Lloyds Junior Banking
+    </p>
+
+    <p id="buttons">
+        <a id="back_to_top" href="#main" class="smoothScroll">Back to Login</a>
+        <!-- <a id="register" href="SignUp.html">Register</a> -->
+    </p>
+
+
+    <div id="partners">
+        <div id="brands_logos">
+            <img src={% static 'login/bank_of_scotland.png' %} alt="bank_of_scotland" class="logos">
+            <img src={% static 'login/birmingham_midshares.png' %} alt="birmingham_midshares" class="logos">
+            <img src={% static 'login/black_horse.png' %} alt="black_horse" class="logos">
+            <img src={% static 'login/colleys.png' %} alt="colleys" class="logos">
+            <img src={% static 'login/halifax.png' %} alt="halifax" class="logos">
+            <img src={% static 'login/ldc.png' %} alt="ldc" class="logos">
+            <img src={% static 'login/lloyds_autolease.png' %} alt="lloyds_autolease" class="logos">
+            <img src={% static 'login/lloyds_bank.png' %} alt="lloyds_bank" class="logos">
+            <img src={% static 'login/scottish_widows.png' %} alt="scottish_widows" class="logos">
+        </div>
+    </div>
 </div>
-		
+
 
 </body>
 </html>
