--- a/templates/goals.html
+++ b/templates/goals.html
@@ -1,18 +1,22 @@
-
 <!DOCTYPE html >
 <html>
 {% load staticfiles %}
-<head> 
- <meta http-equiv="content-type" 
- content="text/html;charset=utf-8"/> 
- <link rel="stylesheet" type="text/css" href={% static 'goals/goals.css' %}/>
- <style>
-	body {background-image: url('{% static "general\background_kids.jpg" %}') ;}
-	#nav_bar {background-image: url('{% static "general\lloyds_group_logo.png" %}') ;}
-</style>
- {% include 'goal_render.html' %}
- <title>Goals</title> 
-</head> 
+<head>
+    <meta http-equiv="content-type"
+          content="text/html;charset=utf-8"/>
+    <link rel="stylesheet" type="text/css" href={% static 'goals/goals.css' %}/>
+    <style>
+        body {
+            background-image: url('{% static "general\background_kids.jpg" %}');
+        }
+
+        #nav_bar {
+            background-image: url('{% static "general\lloyds_group_logo.png" %}');
+        }
+    </style>
+    {% include 'goal_render.html' %}
+    <title>Goals</title>
+</head>
 
 
 <body onLoad="initialize();">
@@ -20,69 +24,82 @@
 {% include 'nav_bar.html' %}
 
 <div id="banner">
-<img src={% static 'goals/Goals_1.png' %} width="1055px" height="191px" alt="Goals Banner">
-{% include 'logout_button.html' %}
+    <img src={% static 'goals/Goals_1.png' %} width="1055px" height="191px" alt="Goals Banner">
+    {% include 'logout_button.html' %}
 </div>
 
 <div id="content">
 
-<div id="frame" title="Bar LEFTCLICK = auto-fill the corresponding To (goal) field.
+    <div id="frame" title="Bar LEFTCLICK = auto-fill the corresponding To (goal) field.
 Bar RIGHTCLICK = auto-fill the corresponding From (goal) field.">
-    <div id="start_text">START</div>
-    <div id="finish_text">FINISH</div>
+        <div id="start_text">START</div>
+        <div id="finish_text">FINISH</div>
 
-<div id="y-axis">
+        <div id="y-axis">
+            {% for key, value in sorted_goals %}
+                <div class="numbers">{{ key }}</div>
+            {% endfor %}
+        </div>
+
+
+        <div id="chart">
+            <div class="bar_wrappers">
+                <div id="bar1" class="bars" oncontextmenu="autoFillFromGoalFields(this.id, event);"
+                     onClick="autoFillToGoalFields(this.id);"></div>
+                <img src={% static 'goals/horse.png' %} width="40px" height="25px" style="background-color: transparent"
+                     class="horse" id="horse1"
+                     oncontextmenu="autoFillFromGoalFields(this.id, event);" onClick="autoFillToGoalFields(this.id);">
+            </div>
+
+            <div class="bar_wrappers">
+                <div id="bar2" class="bars" oncontextmenu="autoFillFromGoalFields(this.id, event);"
+                     onClick="autoFillToGoalFields(this.id);"></div>
+                <img src={% static 'goals/horse.png' %} width="40px" height="25px" style="background-color: transparent"
+                     class="horse" id="horse2"
+                     oncontextmenu="autoFillFromGoalFields(this.id, event);" onClick="autoFillToGoalFields(this.id);">
+            </div>
+
+            <div class="bar_wrappers">
+                <div id="bar3" class="bars" oncontextmenu="autoFillFromGoalFields(this.id, event);"
+                     onClick="autoFillToGoalFields(this.id);"></div>
+                <img src={% static 'goals/horse.png' %} width="40px" height="25px" style="background-color: transparent"
+                     class="horse" id="horse3"
+                     oncontextmenu="autoFillFromGoalFields(this.id, event);" onClick="autoFillToGoalFields(this.id);">
+            </div>
+
+            <div class="bar_wrappers">
+                <div id="bar4" class="bars" oncontextmenu="autoFillFromGoalFields(this.id, event);"
+                     onClick="autoFillToGoalFields(this.id);"></div>
+                <img src={% static 'goals/horse.png' %} width="40px" height="25px" style="background-color: transparent"
+                     class="horse" id="horse4"
+                     oncontextmenu="autoFillFromGoalFields(this.id, event);" onClick="autoFillToGoalFields(this.id);">
+            </div>
+            <div id="balance_text">Total : {{ total }} points</div>
+        </div>
+
+        <div id="finish">
+            <div class="finish"><img src={% static 'goals/finish_sign.png' %} width="25px" height="25px"
+                                     alt="finish sign"></div>
+            <div class="finish"><img src={% static 'goals/finish_sign.png' %} width="25px" height="25px"
+                                     alt="finish sign"></div>
+            <div class="finish"><img src={% static 'goals/finish_sign.png' %} width="25px" height="25px"
+                                     alt="finish sign"></div>
+            <div class="finish"><img src={% static 'goals/finish_sign.png' %} width="25px" height="25px"
+                                     alt="finish sign"></div>
+        </div>
+    </div>
+
+    <div id="legend">
+
         {% for key, value in sorted_goals %}
-            <div class="numbers">{{ key }}</div>
+            <p id={{ key }}></p>
         {% endfor %}
-</div>
+    </div>
 
+    <div id="overview">
 
-<div id="chart">
-	<div class="bar_wrappers">
-		<div id="bar1" class="bars" oncontextmenu="autoFillFromGoalFields(this.id, event);" onClick="autoFillToGoalFields(this.id);"></div>
-		<img src={% static 'goals/horse.png' %} width="40px" height="25px" style="background-color: transparent" class="horse" id="horse1"
-									 oncontextmenu="autoFillFromGoalFields(this.id, event);" onClick="autoFillToGoalFields(this.id);">
-	</div>
-
-	<div class="bar_wrappers">
-		<div id="bar2" class="bars" oncontextmenu="autoFillFromGoalFields(this.id, event);" onClick="autoFillToGoalFields(this.id);"></div>
-		<img src={% static 'goals/horse.png' %} width="40px" height="25px" style="background-color: transparent" class="horse" id="horse2"
-									 oncontextmenu="autoFillFromGoalFields(this.id, event);" onClick="autoFillToGoalFields(this.id);">	</div>
-	
-	<div class="bar_wrappers">
-		<div id="bar3" class="bars" oncontextmenu="autoFillFromGoalFields(this.id, event);" onClick="autoFillToGoalFields(this.id);"></div>
-		<img src={% static 'goals/horse.png' %} width="40px" height="25px" style="background-color: transparent" class="horse" id="horse3"
-									 oncontextmenu="autoFillFromGoalFields(this.id, event);" onClick="autoFillToGoalFields(this.id);">
-	</div>
-	
-	<div class="bar_wrappers">
-		<div id="bar4" class="bars" oncontextmenu="autoFillFromGoalFields(this.id, event);" onClick="autoFillToGoalFields(this.id);"></div>
-		<img src={% static 'goals/horse.png' %} width="40px" height="25px" style="background-color: transparent" class="horse" id="horse4"
-									 oncontextmenu="autoFillFromGoalFields(this.id, event);" onClick="autoFillToGoalFields(this.id);">
-	</div>
-        <div id="balance_text">Total : {{ total }} points</div>
-</div>
-
-<div id="finish">
-	<div class="finish"><img src={% static 'goals/finish_sign.png' %} width="25px" height="25px" alt="finish sign"></div>
-	<div class="finish"><img src={% static 'goals/finish_sign.png' %} width="25px" height="25px" alt="finish sign"></div>
-	<div class="finish"><img src={% static 'goals/finish_sign.png' %} width="25px" height="25px" alt="finish sign"></div>
-	<div class="finish"><img src={% static 'goals/finish_sign.png' %} width="25px" height="25px" alt="finish sign"></div>
-</div>
-</div>
-
-<div id="legend">
-
-    {% for key, value in sorted_goals %}
-	<p id={{ key }}></p>
-    {% endfor %}
-</div>
-
-<div id="overview">
-
-	<div class="winners">
-		<!--<p class="heading">Achieved goal</p>
+        <div class="winners">
+            <!--<p class="heading">Achieved goal</p>
         {% for key,value in sorted_goals %}
         {% if value.reached %}
             <div class="winning_entry">
@@ -94,30 +111,30 @@ Bar RIGHTCLICK = auto-fill the corresponding From (goal) field.">
             </div>
         {% endif %}
     {% endfor %}-->
-	</div>
+        </div>
 
-</div>
+    </div>
 
-<form id="control_panel">
-	<div id="add_points">
-		<p>
-			Goal <input type="text" id="add_goal_num" /><br/>
-			Points <input type="text" id="add_goal_points" /><br/>
-		</p>
-		<input class="add" type="button" value="ADD POINTS" onClick="addPoints();" />
-	</div>
+    <form id="control_panel">
+        <div id="add_points">
+            <p>
+                Goal <input type="text" id="add_goal_num"/><br/>
+                Points <input type="text" id="add_goal_points"/><br/>
+            </p>
+            <input class="add" type="button" value="ADD POINTS" onClick="addPoints();"/>
+        </div>
 
-	<div id="move_points">
-		<p>
-			From <input type="text" id="from_goal_num" /><br/>
-			To <input type="text" id="to_goal_num" /><br/>
-			Points <input type="text" id="move_goal_points" /><br/>
-		</p>
-		<input class="move" type="button" value="MOVE POINTS" onClick="movePoints();" />
-	</div>
-</form>
+        <div id="move_points">
+            <p>
+                From <input type="text" id="from_goal_num"/><br/>
+                To <input type="text" id="to_goal_num"/><br/>
+                Points <input type="text" id="move_goal_points"/><br/>
+            </p>
+            <input class="move" type="button" value="MOVE POINTS" onClick="movePoints();"/>
+        </div>
+    </form>
 
-{% include 'footer.html' %}
+    {% include 'footer.html' %}
 
 </div>
 </body>
